--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-<form action="" method="post">
-    <input type="number"><input type="number">
+<form action="" method="post" class="form">
+    <input type="number" name="number1">
+    <select name="signs" id="">
+        <option value="">-</option>
+        <option value="">+</option>
+        <option value="">:</option>
+        <option value="">*</option>
+    </select>
+    <input type="number">
+    <button type="button" class="button">Ответ</button>
 </form>
+<script src="function.js"></script>
 </body>
 </html>
