--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <form action="" method="post" class="form">
     <input type="number" name="number1">
     <select name="signs" id="">
-        <option value="">-</option>
-        <option value="">+</option>
-        <option value="">:</option>
-        <option value="">*</option>
+        <option value="" data-signs="minus">-</option>
+        <option value="" data-signs="plus">+</option>
+        <option value="" data-signs="division">:</option>
+        <option value="" data-signs="multiplications">*</option>
     </select>
-    <input type="number">
+    <input type="number" name="number2">
     <button type="button" class="button">Ответ</button>
 </form>
 <script src="function.js"></script>
