--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<form action="" method="post" class="form">
+<form action="function.php" method="post" class="form">
     <input type="number" name="number1">
     <select name="signs" id="">
-        <option value="" data-signs="minus">-</option>
-        <option value="" data-signs="plus">+</option>
-        <option value="" data-signs="division">:</option>
-        <option value="" data-signs="multiplications">*</option>
+        <option value="minus" data-signs="minus">-</option>
+        <option value="plus" data-signs="plus">+</option>
+        <option value="division" data-signs="division">:</option>
+        <option value="multiplications" data-signs="multiplications">*</option>
     </select>
     <input type="number" name="number2">
-    <button type="button" class="button">Ответ</button>
+    <button type="submit" name="submit" class="button">Ответ</button>
 </form>
 <script src="function.js"></script>
 </body>
